tests/types/errors/fun_wrong_return.err
1. error[T010]: return type mismatch: expected int, got string
  --> tests/types/errors/fun_wrong_return.mochi:2:3

  2 |   return "oops"
    |   ^

help:
  Update the return value to match the function's return type.